demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one
#  namespace: demo-app  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one
#  namespace: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-two  
#  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
      - name: aks-helloworld-two
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-two  
#  namespace: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-two
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
#  namespace: demo-app
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #kubernetes.io/tls-acme: "true" 
    #ingressclass.kubernetes.io/is-default-class: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"   
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
#    cert-manager.io/cluster-issuer: letsencrypt
spec:
#  ingressClassName: nginx
  rules:
  - host: demo1.anjibabu.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
  - host: demo2.anjibabu.in
    http:
      paths:            
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
#  tls:
#  - hosts:
#    - demo1.anjibabu.in
#    - demo2.anjibabu.in
#    secretName: demo-secret
